# probex

./: .gitignore  .goreleaser.yml  CHANGELOG.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
brain/: README.md  pyproject.toml
brain/src/probex_brain/: __init__.py  server.py
brain/src/probex_brain/ai/: base.py  cloud_provider.py  local_provider.py  prompts.py  router.py
brain/src/probex_brain/analysis/: anomaly.py
brain/src/probex_brain/generator/: nl_to_test.py  scenario.py  security.py
brain/src/probex_brain/models/: config.py  schemas.py
brain/tests/: conftest.py  test_nl_to_test.py  test_router.py  test_scenario_generator.py  test_schemas.py  test_security_analyzer.py  test_server.py
core/: .golangci.yml  go.mod  go.sum  main.go
core/cmd/: collective.go  config.go  discover.go  graph.go  guard.go  learn.go  proxy.go  report.go  root.go  run.go  scan.go  serve.go  test_nl.go  watch.go
core/test/: ai_types_test.go  collective_test.go  e2e_test.go  generator_test.go  graph_test.go  graphql_test.go  grpc_test.go  helpers_test.go  iac_test.go  integration_test.go  learn_test.go  models_test.go  plugin_test.go  proxy_test.go  report_test.go  (+9 more)
docker/: Dockerfile  Dockerfile.core  docker-compose.yml
docs/: architecture.md  collective.md  configuration.md  getting-started.md  iac-discovery.md  plugins.md  sdk-java.md  sdk-js.md  sdk-kotlin.md  security.md  wiki.md
sdk-java/: pom.xml
sdk-js/: package-lock.json  package.json  tsconfig.json
sdk-kotlin/: build.gradle.kts  settings.gradle.kts
vscode-extension/: package.json
(+111 files in other folders)
