[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probex-brain"
version = "0.4.0"
description = "AI brain service for PROBEX — intelligent API test generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "ollama>=0.4.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
probex-brain = "probex_brain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/probex_brain"]

[tool.ruff]
line-length = 100
